<resources>
    <string name="app_name">📝  Gestori app</string>
    <string name="ok"> Ok </string>

    <string name="addConceptoSuccess"> The concept has been addded </string>
    <string name="addConceptoFailure"> The concept cannot be empty </string>
    <string name="titleAddEstablecimientoSinConcepto"> No concepts </string>
    <string name="bodyAddEstablecimientoSinConcepto"> The list of concepts for this establishment is empty. Please, add a concept. </string>
    <string name="titleAddEstablecimientoCamposVacios"> Empty fields </string>
    <string name="bodyAddEstablecimientoCamposVacios"> The fields of this form cannot be empty. </string>
    <string name="titleAddGastoIngresoCamposVacios"> Empty fields </string>
    <string name="bodyAddGastoIngresoCamposVacios"> The amount and the transaction date cannot be empty. </string>
    <string name="addGastoIngresoTipoTransaccion"> Select the type of transaction (Expense/Revenue) </string>
    <string name="addGastoIngresoImportePositivo"> The amount introduced must be bigger than 0 </string>
    <string name="titleAddGastoConceptoVacio"> Concept of expense is empty </string>
    <string name="bodyAddGastoConceptoVacio"> Choose the concept of the expense, please. </string>
    <string name="confirmacionAddTransaction"> The transaction has been added </string>
    <string name="respuestaPositiva">Yes</string>
    <string name="respuestaNegativa">No</string>
    <string name="titleBorrarConfirmacion"> Confirmation </string>
    <string name="bodyBorrarConfirmacion"> Are you sure you want to delete this? </string>
    <string name="textListaEstablecimientos"> Establishments list </string>
    <string name="textBorrar"> Delete </string>
    <string name="textSeleccionarFecha"> Select date </string>
    <string name="textAñadir"> Add </string>
    <string name="textGasto"> Expense </string>
    <string name="textGastos"> Expenses </string>
    <string name="textIngreso"> Revenue </string>
    <string name="textImporte"> Amount </string>
    <string name="textDescripcion"> Description </string>
    <string name="textConcepto"> Concept </string>
    <string name="textConceptos"> Concepts </string>
    <string name="textSeleccionarConcepto"> Select concept </string>
    <string name="textFecha"> Date </string>
    <string name="textNombre"> Name </string>
    <string name="textCiudad"> City </string>
    <string name="textCalle"> Street </string>
    <string name="textCodigoPostal"> Postal code </string>
    <string name="textGraficas"> Charts </string>
    <string name="titleIrAGraficasFailure"> No establishments with transactions </string>
    <string name="bodyIrAGraficasFailure"> Make sure to add transactions to any establishment before accessing the charts. </string>
    <string name="initialTextChart"> SELECT A ESTABLISHMENT TO SEE THE DATA </string>
    <string name="descriptionBarChart"> Benefits per establishment </string>
    <string name="textGastosPorCategoriaSinGastos"> NO EXPENSES IN THIS ESTABLISHMENT </string>
    <string name="textBeneficiosSinTransacciones"> NO TRANSACTIONS IN THIS ESTABLISHMENT </string>
    <string name="textAñadirTransacciones"> Add your transaction </string>
    <string name="textAñadirEstablecimientos"> Add your establishment </string>
    <string name="textTuFecha"> Your date </string>
    <string name="textVisualizarDatos"> VISUALIZE DATA </string>
    <string name="textTransaccion"> Transaction details </string>
    <string name="textEmpty"> You have not added any transaction yet. Click on + to add your first transaction. </string>
    <string name="titleBienvenida"> Welcome to Gestori 💜 </string>
    <string name="bodyBienvenida"> There is data already inserted to make it easier for you to test all functionalities, but you can delete this data.\n\nIf you want to add your own establishment, just click on + and complete the form.\n\nThank you for trying Gestori!  </string>
</resources>