<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context=".GastoIngresoActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginEnd="1dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/textTransaccion"
            android:textColor="#000000"
            android:textSize="26sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:layout_marginHorizontal="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/etiquetaImporte"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/textImporte"
                android:textAlignment="textEnd"
                android:textColor="#000000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/valorImporte"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:text="TextView"
                android:textSize="18sp" />
        </LinearLayout>

        <View
            android:id="@+id/divider1"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="?android:attr/listDivider"
            android:backgroundTint="#FF6200EE"
            android:foregroundTint="#FF6200EE" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:layout_marginHorizontal="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/etiquetaFecha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/textFecha"
                android:textAlignment="textEnd"
                android:textColor="#000000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/valorFecha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:text="TextView"
                android:textSize="18sp" />
        </LinearLayout>

        <View
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="?android:attr/listDivider"
            android:backgroundTint="#FF6200EE"
            android:foregroundTint="#FF6200EE" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:layout_marginHorizontal="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/etiquetaDescripcion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/textDescripcion"
                android:textAlignment="textEnd"
                android:textColor="#000000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/valorDescripcion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:text="TextView"
                android:textSize="18sp" />
        </LinearLayout>

        <View
            android:id="@+id/divider3"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="?android:attr/listDivider"
            android:backgroundTint="#FF6200EE"
            android:foregroundTint="#FF6200EE" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:layout_marginHorizontal="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/etiquetaConcepto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/textConcepto"
                android:textAlignment="textEnd"
                android:textColor="#000000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/valorConcepto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:text="TextView"
                android:textSize="18sp" />
        </LinearLayout>

        <View
            android:id="@+id/divider4"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="?android:attr/listDivider"
            android:backgroundTint="#FF6200EE"
            android:foregroundTint="#FF6200EE" />

        <Button
            android:id="@+id/button"
            android:layout_width="339dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:backgroundTint="#F44336"
            android:onClick="onClickBorrarTransaccion"
            android:text="@string/textBorrar"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold" />


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>